Closes #21